--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "packageManager": "pnpm@9.7.0",
   "dependencies": {
-    "@clerk/nextjs": "^6.10.3",
-    "next": "15.1.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "@clerk/nextjs": "6.10.4-canary.v20250129165959",
+    "babel-plugin-react-compiler": "19.0.0-beta-27714ef-20250124",
+    "next": "15.2.0-canary.31",
+    "react": "19.1.0-canary-c492f975-20250128",
+    "react-dom": "19.1.0-canary-c492f975-20250128"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.0",
