--- a/package.json
+++ b/package.json
@@ -11,9 +11,17 @@
   "packageManager": "pnpm@9.7.0",
   "dependencies": {
     "@clerk/nextjs": "^6.10.3",
+    "@tanstack/react-query": "^5.65.1",
+    "@trpc/client": "11.0.0-rc.730",
+    "@trpc/react-query": "11.0.0-rc.730",
+    "@trpc/server": "11.0.0-rc.730",
+    "client-only": "^0.0.1",
     "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "server-only": "^0.0.1",
+    "superjson": "^2.2.2",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.0",
