--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "packageManager": "pnpm@9.7.0",
   "dependencies": {
     "@clerk/nextjs": "^6.12.6",
+    "convex": "^1.21.0",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
